react-k8s-print-pod-name/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-k8s-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-k8s-app
  template:
    metadata:
      labels:
        app: react-k8s-app
    spec:
      containers:
        - name: react-k8s-app
          image: cvsudeep/react-k8s-print-pod-name:latest
          # imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
