react-k8s-print-pod-name/k8s/Service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: react-k8s-app-service
# spec:
#   type: NodePort
#   selector:
#     app: react-k8s-app
#   ports:
#     - protocol: TCP
#       port: 80         
#       targetPort: 80     
#       nodePort: 30007    
apiVersion: v1
kind: Service
metadata:
  name: react-k8s-app-service
spec:
  selector:
    app: react-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
