react-k8s-print-pod-name/k8s/react-app-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: react-app-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "react.app.com"
#     http:
#       paths:
#       - backend:
#           service:
#             name: react-k8s-app-service
#             port:
#               number: 80
#         path: /
#         pathType: Prefix
# status:
#   loadBalancer: {}
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /app(/|$)(.*)
        backend:
          service:
            name: react-k8s-app-service
            port:
              number: 80
      # - pathType: ImplementationSpecific
      #   path: /api(/|$)(.*)
      #   backend:
      #     service:
      #       name: springboot-api-server-service
      #       port:
      #         number: 80
